--- a/cvanglais.html
+++ b/cvanglais.html
@@ -20,6 +20,7 @@
             <span>French nationality</span>                             <!--Nationality-->
             <span>(+33) 617 284 300</span>                              <!--Number-->
             <span>dechirmathys@icloud.com</span>                        <!--Email-->
+            <span>driver license acquired</span>                        <!--Email-->
         </p>
     </div>
 
@@ -38,7 +39,7 @@
         <p><b>EDUCATION</b></p>
         <hr>
         <p>
-            <span> <b>2 year technical degree Digital System</b></span>
+            <span> <b>2nd first year technical degree Digital System</b></span>
             <span><i>General and technological high school La Providence</i></span>
             <span>2020-2022</span>
             <span>Amiens-France</span>
@@ -67,28 +68,28 @@
             <span>• Computer repair</span>
             <span>• Software installation</span>
             <span>• Invoice system management</span> 
-            <span>of 06/15/2019</span>
-            <span>at 07/04/2020</span>
+            <span>from 06/15/2019</span>
+            <span>to 07/04/2020</span>
             <span>(Amiens-France)</span>
         </p>
         <p>
             <span> <b>1FORMATIQUE AMIENS | INTERN</b></span>
             <span>Accomplished tasks :</span>
-            <span>• Appliance repair</span>
+            <span>• Appliance repairs</span>
             <span>• Delivery and installation of household appliances</span>
             <span>• Stock management</span> 
-            <span>of 02/23/2019</span>
-            <span>at 03/11/2019</span>
+            <span>from 02/23/2019</span>
+            <span>to 03/11/2019</span>
             <span>(Amiens-France)</span>
         </p>
         <p>
             <span> <b>1FORMATIQUE AMIENS | INTERN</b></span>
             <span>Accomplished tasks :</span>
-            <span>• Computer repair</span>
+            <span>• Computer repairs</span>
             <span>• Software installation</span>
             <span>• Invoice system management</span> 
-            <span>of 12/16/2019</span>
-            <span>at 01/06/2020</span>
+            <span>from 12/16/2019</span>
+            <span>to 01/06/2020</span>
             <span>(Amiens-France)</span>
         </p>
     </div>
@@ -99,7 +100,7 @@
         <hr>
         <p>
             <span>Time management, Patience, Creativity, Teamwork</span>
-            <span>Native speaker French and a decent level in english</span>
+            <span>French native speaker and a B2 level in english</span>
             <span>IT : HTML, CSS, C++, Photoshop</span>
         </p>
     </div>
@@ -109,7 +110,7 @@
         <p><b> INTERST AND HOBBIES</b></p>
         <hr>    <!--Thematic Break -->
         <p>
-            <span>Travel: Europe (Italy, Netherlands and Switzerland) and others (United States and Caribbean).</span>
+            <span>Travel: Europe (Italy, Netherlands and Switzerland) and others (the United States and the Caribbean).</span>
             <span>IT: Interested in IT since my childhood.</span>
             <span>I love photography and fashion.</span>
         </p>
