--- a/cvanglais.html
+++ b/cvanglais.html
@@ -20,7 +20,7 @@
             <span>French nationality</span>                             <!--Nationality-->
             <span>(+33) 617 284 300</span>                              <!--Number-->
             <span>dechirmathys@icloud.com</span>                        <!--Email-->
-            <span>driver license acquired</span>                        <!--Email-->
+            <span>driver license acquired</span>                        <!--Driver license-->
         </p>
     </div>
 
