--- a/cvanglais.html
+++ b/cvanglais.html
@@ -16,11 +16,11 @@
     <!--top part-->
     <div class="top">
         <p>
-            <span>48 Rue principale 80610 Bettencourt Saint Ouen</span> <!--Adress-->
-            <span>French nationality</span>                             <!--Nationality-->
-            <span>(+33) 617 284 300</span>                              <!--Number-->
-            <span>dechirmathys@icloud.com</span>                        <!--Email-->
-            <span>driver license acquired</span>                        <!--Driver license-->
+            <span><img src="location.png"> Rue principale 80610 Bettencourt Saint Ouen</span> <!--Adress-->
+            <span><img src="frenchflag.png"> French nationality</span>                             <!--Nationality-->
+            <span><img src="phone.png"> (+33) 617 284 300</span>                              <!--Number-->
+            <span><img src="mail.png"> dechirmathys@icloud.com</span>                        <!--Email-->
+            <span><img src="driver.jpg"> driver license acquired</span>                        <!--Driver license-->
         </p>
     </div>
 
