add check char to text

--- a/cvanglais.html
+++ b/cvanglais.html
@@ -99,9 +99,9 @@
         <p><b> SKILLS</b></p>
         <hr>
         <p>
-            <span>Time management, Patience, Creativity, Teamwork</span>
-            <span>French native speaker and a B2 level in english</span>
-            <span>IT : HTML, CSS, C++, Photoshop</span>
+            <span>• Time management, Patience, Creativity, Teamwork</span>
+            <span>• French native speaker and a B2 level in english</span>
+            <span>• IT : HTML, CSS, C++, Photoshop</span>
         </p>
     </div>
 
@@ -110,9 +110,9 @@
         <p><b> INTERST AND HOBBIES</b></p>
         <hr>    <!--Thematic Break -->
         <p>
-            <span>Travel: Europe (Italy, Netherlands and Switzerland) and others (the United States and the Caribbean).</span>
-            <span>IT: Interested in IT since my childhood.</span>
-            <span>I love photography and fashion.</span>
+            <span>✓ Travel: Europe (Italy, Netherlands and Switzerland) and others (the United States and the Caribbean).</span>
+            <span>✓ IT: Interested in IT since my childhood.</span>
+            <span>✓ I love photography and fashion.</span>
         </p>
     </div>
 </body>
