--- a/cvanglais.html
+++ b/cvanglais.html
@@ -16,11 +16,11 @@
     <!--top part-->
     <div class="top">
         <p>
-            <span><img src="location.png" alt="location"> Rue principale 80610 Bettencourt Saint Ouen</span> <!--Adress-->
-            <span><img src="frenchflag.png" alt="frenchflag"> French nationality</span>                      <!--Nationality-->
-            <span><img src="phone.png" alt="phone"> (+33) 617 284 300</span>                                 <!--Number-->
-            <span><img src="mail.png" alt="mail"> dechirmathys@icloud.com</span>                             <!--Email-->
-            <span><img src="driver.jpg" alt="driver"> driver license acquired</span>                         <!--Driver license-->
+            <span><img src="location.png" alt="location"> 48 Rue principale 80610 Bettencourt Saint Ouen</span> <!--Adress-->
+            <span><img src="frenchflag.png" alt="frenchflag"> French nationality</span>                         <!--Nationality-->
+            <span><img src="phone.png" alt="phone"> (+33) 617 284 300</span>                                    <!--Number-->
+            <span><img src="mail.png" alt="mail"> dechirmathys@icloud.com</span>                                <!--Email-->
+            <span><img src="driver.jpg" alt="driver"> driver license acquired</span>                            <!--Driver license-->
         </p>
     </div>
 
@@ -100,14 +100,14 @@
         <hr>
         <p>
             <span>• Time management, Patience, Creativity, Teamwork</span>
-            <span>• French native speaker and a B2 level in english</span>
+            <span>• French native speaker and a B2 level in English</span>
             <span>• IT : HTML, CSS, C++, Photoshop</span>
         </p>
     </div>
 
     <!--hobbies part-->
     <div class="InterestsandHoobies">
-        <p><b> INTERST AND HOBBIES</b></p>
+        <p><b> INTERSTS AND HOBBIES</b></p>
         <hr>    <!--Thematic Break -->
         <p>
             <span>✓ Travel: Europe (Italy, Netherlands and Switzerland) and others (the United States and the Caribbean).</span>
